WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154343
[iOS] Purge GraphicsServices font cache on memory warning.
https://bugs.webkit.org/show_bug.cgi?id=154343
Summary
[iOS] Purge GraphicsServices font cache on memory warning.
Andreas Kling
Reported
2016-02-17 10:53:28 PST
Platform objects for CSS fonts currently survive fake memory warnings due to the GS font cache retaining them.
Attachments
Potch
(2.18 KB, patch)
2016-02-17 10:54 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.89 KB, patch)
2017-01-02 06:56 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.89 KB, patch)
2017-01-12 11:52 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.09 KB, patch)
2017-01-12 14:48 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2016-02-17 10:54:58 PST
Created
attachment 271565
[details]
Potch
WebKit Commit Bot
Comment 2
2016-02-17 12:27:55 PST
Comment on
attachment 271565
[details]
Potch Clearing flags on attachment: 271565 Committed
r196712
: <
http://trac.webkit.org/changeset/196712
>
WebKit Commit Bot
Comment 3
2016-02-17 12:28:00 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 4
2016-02-17 17:19:32 PST
It looks like this change may have caused new API test failures on ios-simulator <
https://build.webkit.org/builders/Apple%20iOS%209%20Simulator%20Release%20WK2%20%28Tests%29/builds/3185
> Tests that failed: WKUserContentController.AddUserStyleSheetAfterCreatingView WKUserContentController.AddUserStyleSheetBeforeCreatingView WebKit2.BundleParameters Tests that timed out: WKWebView.LoadAlternateHTMLStringFromProvisionalLoadError WebKit2.RemoteObjectRegistry
Ryan Haddad
Comment 5
2016-02-17 17:35:27 PST
I ran API tests with and without this change locally, and it does appear that it causes the failures.
WebKit Commit Bot
Comment 6
2016-02-17 18:00:25 PST
Re-opened since this is blocked by
bug 154371
Andreas Kling
Comment 7
2017-01-02 06:56:36 PST
Created
attachment 297897
[details]
Patch for landing
Andreas Kling
Comment 8
2017-01-12 11:52:04 PST
Created
attachment 298703
[details]
Patch for landing Surprised that this doesn't link on iOS EWS. Trying a re-upload before diving deeper.
Andreas Kling
Comment 9
2017-01-12 14:48:13 PST
Created
attachment 298711
[details]
Patch for landing
WebKit Commit Bot
Comment 10
2017-01-12 16:48:42 PST
Comment on
attachment 298711
[details]
Patch for landing Clearing flags on attachment: 298711 Committed
r210688
: <
http://trac.webkit.org/changeset/210688
>
WebKit Commit Bot
Comment 11
2017-01-12 16:48:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug