[iOS] Purge GraphicsServices font cache on memory warning. <https://webkit.org/b/154343>

Reviewed by Antti Koivisto.

The GS font cache was holding on to the last retain on CSS fonts after they stop being used.
Call SPI to purge it on memory pressure.

* platform/cocoa/MemoryPressureHandlerCocoa.mm:
(WebCore::MemoryPressureHandler::platformReleaseMemory):
* platform/spi/ios/GraphicsServicesSPI.h:


Canonical link: https://commits.webkit.org/172466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196712 268f45cc-cd09-0410-ab3c-d52691b4dbfc